fdo#47021: the naive join attempt leads to deadlock

...something better is required (getting rid of the solar mutex?).